--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,4 @@
+<% provide( :title , 'Home') %>
 <h1>StaticPages#home</h1>
-sample app
+Sample App
 <p>Find me in app/views/static_pages/home.html.erb</p>
