--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,4 @@
-<% provide( :title , 'Home') %>
+<% provide( :title , '') %>
 <h1>StaticPages#home</h1>
 Sample App
 <p>Find me in app/views/static_pages/home.html.erb</p>
