--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -90,3 +90,13 @@ footer ul li {
   float: left;
   margin-left: 10px;
 }
+input, textarea, select, .uneditable-input {
+  border: 1px solid #bbb;
+  width: 100%;
+  margin-bottom: 15px;
+ 
+}
+
+input {
+  height: auto !important;
+}
