--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
   </head>
   <body>
     <%= render 'layouts/header' %>
-    <div class="container" >
+    <div class="container" style="margin-top:100px;">
     <%= yield %>
   </div>
   <%= render 'layouts/footer' %>
