--- a/app/assets/stylesheets/cutom.css.scss
+++ b/app/assets/stylesheets/cutom.css.scss
@@ -1,4 +1,5 @@
-@import 'bootstrap';
+@import "bootstrap";
+
 html {
   overflow-y: scroll;
 }
@@ -10,8 +11,8 @@ body {
 section {
   overflow: auto;
 }
-textarea
- {
+
+textarea {
   resize: vertical;
 }
 
@@ -62,6 +63,7 @@ p {
   color: #fff;
   text-decoration: none;
 }
+
 footer {
   margin-top: 45px;
   padding-top: 5px;
@@ -89,14 +91,4 @@ footer ul {
 footer ul li {
   float: left;
   margin-left: 10px;
-}
-input, textarea, select, .uneditable-input {
-  border: 1px solid #bbb;
-  width: 100%;
-  margin-bottom: 15px;
-  
-}
-
-input {
-  height: auto !important;
 }
