--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,6 +4,9 @@
       <section>
         <%= render 'layouts/user_info' %>
       </section>
+       <section>
+        <%= render 'shared/stats' %>
+      </section>
       <section>
         <%= render 'layouts/micropost_form' %>
       </section>
